# pyalp

./: Dockerfile  LICENSE  README.md  beams.py  display.py  double_pass.py  engine.py  enhanced_backscatter.py  example.py  grids.py  rayleigh_vacuum.py  reciprocity.py  requirements.txt  run.py  setup.cfg  single_pass.py  turbulence.py
.devcontainer/: devcontainer.json
atmosphere/: engine.py  turbulence.py
beams/: beams.py
components/: adaptive_optics.py  atmosphere.py  lens.py  phase_screen.py  spatial_filter.py
configs/: ebs.yaml  experiment1.yaml  phase_conjugate_test.yaml  single_pass.yaml  vacuum_test.yaml
diagnostics/: display.py
docker/: Dockerfile
domain/: grids.py
experiments/: double_pass.py  enhanced_backscatter.py  reciprocity.py  single_pass.py  strehl.py
pyalp/: __init__.py
pyalp/beams/: beams.py  guassian.py
pyalp/components/: adaptive_optics.py  atmosphere.py  lens.py  phase_screen.py  reflector.py  retroreflector.py  spatial_filter.py  surface.py
pyalp/diagnostics/: diagnostics.py  display.py  visualization.py
pyalp/domain/: grids.py
tests/: phase_conjugation.py  rayleigh_vacuum.py  reciprocity_test.py
