[metadata]
name = pyalp
version = 0.1.0
author = William Nelson
author_email = wnelson11@gmail.com
url = https://github.com/wnelson/pyalp
description = Atmospheric Laser Propagation Library for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    matplotlib
    numpy
    pyyaml
    scipy
    tqdm
